--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,7 @@
+
 <nav>
     <ul class="nav-list">
-        <li class="nav-item"><img src="../../assets/world.png" alt=""></li>
+        <li class="nav-item"><img src="../../assets/world.png" alt="world-img" width="70px" height="70px"></li>
         <li class="nav-item"><a href="">Home</a></li>
         <li class="nav-item"><a href="">Services</a></li>
         <li class="nav-item"><a href="">Sign in/Sign up</a></li>
