create services/about/footer component

--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,5 +1,60 @@
 <div class="container">
-    <div class="welcome">
+    <section class="welcome">
+        <h1>Ready to conquer the world?</h1>
+        <h3>explore more</h3>
+    </section>
+
+    <section class="services" id="sections">
+        <div>
+            <img src="../../assets/flight.png" alt="" width="64" height="64">
+            <h3>Flight tickets</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quis qui ullam exercitationem tempora veritatis voluptas. Recusandae tempora doloremque minus quod assumenda voluptatum error libero tenetur placeat qui. Quod, neque.</p>
+        </div>
+        <div>
+            <img src="../../assets/accomodation.png" alt="" width="64" height="64">
+            <h3>Accomodation</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quis qui ullam exercitationem tempora veritatis voluptas. Recusandae tempora doloremque minus quod assumenda voluptatum error libero tenetur placeat qui. Quod, neque.</p>
+        </div>
+        <div>
+            <img src="../../assets/car.png" alt="" width="64" height="64">
+            <h3>Car Rental</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quis qui ullam exercitationem tempora veritatis voluptas. Recusandae tempora doloremque minus quod assumenda voluptatum error libero tenetur placeat qui. Quod, neque.</p>
+        </div>
+        <div>
+            <img src="../../assets/insurance.png" alt="" width="64" height="64">
+            <h3>Travel Insurance</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quis qui ullam exercitationem tempora veritatis voluptas. Recusandae tempora doloremque minus quod assumenda voluptatum error libero tenetur placeat qui. Quod, neque.</p>
+        </div>
         
-    </div>
+    </section>
+
+    <section class="about">
+        <p><b>We are </b> amet consectetur, adipisicing elit. Suscipit corrupti quam placeat fugiat vel neque quas, et error ea quis possimus, ab iusto accusantium, tempore quasi itaque? Culpa, iste natus.
+            amet consectetur, adipisicing elit. Suscipit corrupti quam placeat fugiat vel neque quas, et error ea quis possimus, ab iusto accusantium, tempore quasi itaque? Culpa, iste natus.
+            
+        </p>
+        <video controls poster="../../assets/poster.png">
+            <source src="../../assets/ad.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
+    
 </div>
