--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,17 +1,6 @@
-@font-face {
-    font-family: "Roboto";
-    src: url(../../assets/fonts/Roboto-Regular.ttf);
-}
-
-*{
-    font-family: 'Roboto', sans-serif;
-    font-size: 20px;
-}
 
 nav{
     background-color: cadetblue;
-    margin: -16px -8px;
-    position: fixed;
     width: 100%;
 
 }
@@ -23,6 +12,7 @@ nav{
 }
 
 .nav-list{
+    margin: 0;
     padding: 2px;
     display: flex;
     flex-direction: row;
