add elts to the footer/add some images

--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -3,6 +3,9 @@
         <h1>Ready to conquer the world?</h1>
         <h3>explore more</h3>
     </section>
+    <hr width="50%">
+    <h1 style="text-align: center;">Our Services :</h1>
+
 
     <section class="services" id="sections">
         <div>
@@ -27,11 +30,12 @@
         </div>
         
     </section>
-
+    <hr width="50%">
+    <h1 style="text-align: center;">About us</h1>
     <section class="about">
         <p><b>We are </b> amet consectetur, adipisicing elit. Suscipit corrupti quam placeat fugiat vel neque quas, et error ea quis possimus, ab iusto accusantium, tempore quasi itaque? Culpa, iste natus.
             amet consectetur, adipisicing elit. Suscipit corrupti quam placeat fugiat vel neque quas, et error ea quis possimus, ab iusto accusantium, tempore quasi itaque? Culpa, iste natus.
-            
+
         </p>
         <video controls poster="../../assets/poster.png">
             <source src="../../assets/ad.mp4" type="video/mp4">
