--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,11 @@
-<p>footer works!</p>
+<footer>
+    <h5>Made by Med Nizar with 🖤</h5>
+    <h6>World-Travel 2021</h6>
+    <div>
+        <img src="../../assets/github.png" alt="linkedin">
+        <img src="../../assets/linkedin.png" alt="github">
+        <img src="../../assets/wtsp.png" alt="whatsapp">
+    </div>
+    
+
+</footer>
