--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -3,7 +3,7 @@ footer{
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     background-color: darkcyan;
 }
 
@@ -12,4 +12,8 @@ footer{
 img{
     width: 40px;
     height: 40px;
+}
+
+footer h6{
+    margin: auto;
 }
