--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,8 @@
 <footer>
-    <h5>Made by Med Nizar with 🖤</h5>
-    <h6>World-Travel 2021</h6>
+    <pre>
+Made by Med Nizar with 🖤
+World-Travel 2021
+    </pre><br>
     <div>
         <img src="../../assets/github.png" alt="linkedin">
         <img src="../../assets/linkedin.png" alt="github">
