--- a/src/styles.css
+++ b/src/styles.css
@@ -4,10 +4,15 @@
     src: url(./assets/fonts/Roboto-Regular.ttf);
 }
 
+*{
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+}
+
 body{
     padding: 0;
     margin: 0;
-    font-family: 'Roboto', sans-serif;
-    font-size: 20px;
+    
     
 }
+
