--- a/src/styles.css
+++ b/src/styles.css
@@ -12,7 +12,13 @@
 body{
     padding: 0;
     margin: 0;
-    
+    background-image: url('./assets/bg.png');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+
     
 }
+
+
 
