add some styling

--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -2,6 +2,7 @@
     <section class="welcome">
         <h1>Ready to conquer the world?</h1>
         <h3>explore more</h3>
+        <div class="moving-arrow"></div>
     </section>
     <hr width="50%">
     <h1 style="text-align: center;">Our Services :</h1>
