--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -1,4 +1,5 @@
 .welcome{
+    margin-top: 80px;
     margin-bottom: 100px;
     height: 600px;
     background-image: url('../../assets/travel.jpg');
@@ -21,6 +22,28 @@
     font-size: 250%;
 }
 
+.moving-arrow{
+    border-top: 10px solid black;
+    border-left: 10px solid transparent ;
+    border-bottom: 10px solid transparent ;
+    border-right: 10px solid transparent ;
+    animation: moving-arrow .9s infinite;
+}
+
+@keyframes moving-arrow {
+    0%{opacity: 0;}
+    10%{opacity: 0.2;}
+    20%{opacity: 0.4;}
+    30%{opacity: 0.6;}
+    40%{opacity: 0.8;}
+    50%{opacity: 1;}
+    60%{opacity: 0.8;}
+    70%{opacity: 0.6;}
+    80%{opacity: 0.4;}
+    90%{opacity: 0.2;}
+    100%{opacity: 0;}
+}
+
 .services{
     max-width: 800px;
     margin: 50px auto;
@@ -34,10 +57,14 @@
 }
 
 .services div{
+    padding: 15px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    box-shadow: 0 20px 20px 10px rgba(0,0,0,0.2);
+    margin: 10px auto;
+    border-radius: 20px;
 }
 
 .about{
@@ -46,7 +73,9 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
-    align-content: center;
+    align-items: center;
+    box-shadow: 0 20px 20px 10px rgba(0,0,0,0.2);
+    padding: 10px;
 
 }
 
@@ -55,7 +84,12 @@
 }
 
 video{
-    max-width: 500px;
+    max-width: 600px;
     border-radius: 20px;
     margin-left: 20px;
 }
+
+hr{
+    margin: auto;
+}
+
