--- a/src/styles.css
+++ b/src/styles.css
@@ -4,14 +4,14 @@
     src: url(./assets/fonts/Roboto-Regular.ttf);
 }
 
-*{
-    font-family: 'Roboto', sans-serif;
-    font-size: 20px;
-}
+
 
 body{
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
     background-image: url('./assets/bg.png');
     background-repeat: no-repeat;
     background-attachment: fixed;
