fixing the footer to the bottom of the page and creating the profile component

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,10 +1,17 @@
 footer{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
     padding: 12px;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
     background-color: darkcyan;
+}
+
+footer div{
+    margin-right: 20px ;
 }
 
 
