--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,8 +1,8 @@
 <footer>
-    <pre>
+    <!-- <pre>
 Made by Med Nizar with 🖤
 World-Travel 2021
-    </pre><br>
+    </pre><br> -->
     <div>
         <img src="../../assets/github.png" alt="linkedin">
         <img src="../../assets/linkedin.png" alt="github">
