--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,10 +1,12 @@
 .login-card{
+    margin: 150px auto;
     display: flex;
     flex-flow: column nowrap;
     width: 800px;
     justify-content: center;
     align-items: center;
-    margin: auto;
+    box-shadow: 20px 20px 20px rgba(0,0,0,0.2);
+    border-radius: 20px;
 }
 
 input{
