fixing some issues

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<app-header></app-header>
-<app-profile></app-profile>
+<app-header [isAuth] = "isAuth"></app-header>
+<div class="container">
+    <app-content></app-content>
+</div>
 <app-footer></app-footer>
+
+
+
