--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -17,6 +17,16 @@
     margin: 7px auto;
 }
 
+.profile-img{
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    border: 2px solid black;
+    background-image: url('../../assets/profile.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
 #save-btn{
     width: 15%;
