--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,1 +1,10 @@
-<p>register works!</p>
+<div class="register-card">
+    <h2>Register</h2>
+    <input type="text" placeholder="First name">
+    <input type="text" placeholder="Last name">
+    <input type="email" placeholder="Email">
+    <input type="password" name="password" id="password" placeholder="Password">
+    <input type="password" name="password" id="conf-password" placeholder="Confirm Password">
+    
+    <input type="submit">
+</div>
