--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -1,6 +1,5 @@
 .welcome{
-    margin-top: 80px;
-    margin-bottom: 100px;
+    margin: 80px auto;
     height: 600px;
     background-image: url('../../assets/travel.jpg');
     background-repeat: no-repeat;
@@ -12,10 +11,18 @@
 
 }
 
-.welcome h3{
+.welcome a{
     background-color: cadetblue;
     border-radius: 12px;
-    padding: 12px;
+    padding: 7px;
+    margin: 5px auto;
+    text-decoration: none;
+    color: black;
+}
+
+.welcome a:hover{
+    color: white;
+    background-color: rgb(78, 109, 110);
 }
 
 .welcome h1{
