--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <section class="welcome">
         <h1>Ready to conquer the world?</h1>
-        <h3>explore more</h3>
+        <a href="#sections">explore more</a>
         <div class="moving-arrow"></div>
     </section>
     <hr width="50%">
