--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,7 +1,5 @@
 footer{
-    position: fixed;
-    bottom: 0;
-    width: 100%;
+    margin-top: 100vh - 20;
     padding: 12px;
     display: flex;
     flex-direction: row;
