--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,6 +5,7 @@
         <li class="nav-item"><a href="../content/content.component.html/#services">Home</a></li>
         <li class="nav-item"><a href="">Services</a></li>
         <li class="nav-item"><a href="">Sign in/Sign up</a></li>
+        <li class="nav-item" *ngIf="isAuth === true"><a href="">Profile</a></li>
     </ul>
 </nav>
 
