--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,4 +1,5 @@
 <div class="profile-card">
+    <div class="profile-img"></div>
     <h3>your name</h3>
     <input type="text" placeholder="First name">
     <input type="text" placeholder="Last name">
