--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -38,7 +38,7 @@
             amet consectetur, adipisicing elit. Suscipit corrupti quam placeat fugiat vel neque quas, et error ea quis possimus, ab iusto accusantium, tempore quasi itaque? Culpa, iste natus.
 
         </p>
-        <video controls poster="../../assets/poster.png">
+        <video poster="../../assets/poster.png">
             <source src="../../assets/ad.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
