--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,13 +1,17 @@
 <footer>
-    <!-- <pre>
+    <pre>
 Made by Med Nizar with 🖤
 World-Travel 2021
-    </pre><br> -->
+    </pre><br>
+
+    <h5> Last refresh : {{lastRefresh | async }}</h5>
+    
     <div>
         <img src="../../assets/github.png" alt="linkedin">
         <img src="../../assets/linkedin.png" alt="github">
         <img src="../../assets/wtsp.png" alt="whatsapp">
     </div>
+
     
 
 </footer>
