--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,4 +3,6 @@
     <input type="email" placeholder="Email">
     <input type="password" name="password" id="password" placeholder="Password">
     <input type="submit">
+    <hr>
+    <a routerLink="/registration">You're not a member? Sign up!</a>
 </div>
