--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header [isAuth] = "isAuth"></app-header>
 <div class="container">
-    <app-content></app-content>
-</div>
+    <router-outlet></router-outlet>
+</div>  
 <app-footer></app-footer>
 
 
