--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,10 +2,10 @@
 <nav>
     <ul class="nav-list">
         <li class="nav-item"><img src="../../assets/world.png" alt="world-img" width="70px" height="70px"></li>
-        <li class="nav-item"><a href="../content/content.component.html/#services">Home</a></li>
-        <li class="nav-item"><a href="">Services</a></li>
-        <li class="nav-item"><a href="">Sign in/Sign up</a></li>
-        <li class="nav-item" *ngIf="isAuth === true"><a href="">Profile</a></li>
+        <li class="nav-item"><a routerLink="">Home</a></li>
+        <li class="nav-item"><a routerLink="">Services</a></li>
+        <li class="nav-item"><a routerLink="login">Sign in/Sign up</a></li>
+        <li class="nav-item" *ngIf="isAuth"><a routerLink="profile">Profile</a></li>
     </ul>
 </nav>
 
