--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -29,6 +29,9 @@
     font-size: 250%;
 }
 
+h1{
+    color: rgb(73, 73, 73);
+}
 .moving-arrow{
     border-top: 10px solid black;
     border-left: 10px solid transparent ;
