fixing some issues and handeling registration and login

--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -76,6 +76,9 @@ h1{
     margin: 10px auto;
     border-radius: 20px;
 }
+.services div:hover{
+    transform: translateY(5px);
+}
 
 .about{
     max-width: 100%;
