--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -1,4 +1,4 @@
-.register-card{
+.register-form{
     margin: 150px auto;
     display: flex;
     flex-flow: column nowrap;
@@ -18,6 +18,7 @@ input{
 
 input:nth-child(7){
     width: 25%;
-    background-color: rgb(105, 169, 172);
+    background-color: #0275d8;
     color: white;
 }
+
